--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -3,6 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: rgb(255, 255, 255);
+    font-family: "Helvetica Neue", sans-serif;
+    text-align: center;
+    min-height: 100vh;
+  }
+  
 /*****************************************/
 nav{
     height: 10vh;
