--- a/styles/style-calculadora.css
+++ b/styles/style-calculadora.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: rgb(255, 255, 255);
+    font-family: "Helvetica Neue", sans-serif;
+    text-align: center;
+    min-height: 100vh;
+  }
 /*****************************************/
 nav{
     height: 10vh;
@@ -36,7 +43,7 @@ display: flex;
 justify-content: space-evenly;
 align-items: center;
 background-color: rgb(79, 120, 255);
-height: 100vh;
+height: 88vh;
 
 }
 
