--- a/styles/style-cep.css
+++ b/styles/style-cep.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
   }
   
+  body {
+    background-color: rgb(255, 255, 255);
+    font-family: "Helvetica Neue", sans-serif;
+    /*text-align: center;*/
+    min-height: 100vh;
+  }
 
   
 /*****************************************/
@@ -45,7 +51,7 @@ nav{
   }
 
   #div-cep{
-    background-color: rgb(0, 0, 70);
+    background-color: rgba(0, 0, 70, 0);
     border-radius: 20px;
     min-width: 30vw;
     padding: 10px;
@@ -66,22 +72,22 @@ nav{
   }
 
   #buscar{
-background-color: rebeccapurple;
+background-color: rgb(0, 183, 255);
 border: 1px solid rgb(0, 0, 0);
 border-radius: 7px;
-color: white;
+color: rgb(0, 0, 0);
 font-size: 1.3rem;
-filter: drop-shadow(0 0 5px black);
+filter: drop-shadow(0 0 3px black);
 padding: 10px;
 margin: 10px;
 }
 
 
 #buscar:hover{
-  background-color: rgb(170, 85, 255);
+  background-color: rgb(0, 70, 150);
   border: 1px solid white;
-  color: rgb(0, 0, 0);
-  filter: drop-shadow(0 0 5px black);
+  color: white;
+  filter: drop-shadow(0 0 65px black);
   }
 
 
@@ -89,6 +95,7 @@ input{
 margin: 10px;
 font-size: 1.3rem;
 color: #000;
+border: 0px;
 }
 
 input::placeholder {
@@ -102,6 +109,8 @@ input:hover{
 input:focus{
   background-color: rgb(29, 153, 255);
   color: white;
+  border: 0px;
+
 }
 
 
