--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -1,46 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/*****************************************/
 
 body {
-    background-color: rgb(255, 255, 255);
-    font-family: "Helvetica Neue", sans-serif;
-    text-align: center;
-    min-height: 100vh;
-  }
-  
-/*****************************************/
-nav{
-    height: 10vh;
-    width: 100vw;  
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: white;
+     align-items: center;
+
 }
 
-#listaMENU{
+
+h1 {
+    text-align: center;
+    font-size: 4rem;
+
+}
+
+div{
+
 display: flex;
 justify-content: space-evenly;
 align-items: center;
-}
-
-ul li{
-    padding: 10px;
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-}
-
-/*****************************************/
-
-
-h1{
-    text-align: center;
-    font-size: 4rem;
+min-height: 80vh;
 
 }
