--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -11,6 +11,11 @@ body {
   min-height: 100vh;
 }
 
+#logo {
+  width: 5vw;
+  
+  }
+
 /*****************************************/
 nav{
   height: 10vh;
