--- a/styles/games.css
+++ b/styles/games.css
@@ -1,3 +1,11 @@
+
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
 .Section1{
   display: flex;
   flex-direction: column;
@@ -19,8 +27,8 @@
   min-width: 400px;
   margin: 50px 10px;
   padding: 20px;
-  width: 40vw;
-  height: 70vh;
+  width: 50vw;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content:space-evenly;
