--- a/styles/games.css
+++ b/styles/games.css
@@ -68,6 +68,34 @@ footer {
 }
 */
 
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width:thin;
+    scrollbar-color: #8f54a0 #ada4a4;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 30px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ada4a4;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #8f54a0;
+    border-radius: 30px;
+    border: 1px solid #4f008b;
+  }
+
+
+
+
+
 /*---------------------------------------------------------------------*/
 
 .sidebar {
@@ -80,6 +108,7 @@ footer {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  
 }
 
 .sidebar a {
@@ -103,6 +132,23 @@ footer {
   background-color: #111;
   color: white;
   border: none;
+  display: flex;
+  align-items:center;
+  justify-content: space-evenly;
+}
+
+
+.openbtn:hover {
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  background-color: #a3a3a3;
+  color: rgb(0, 0, 0);
+  border: 1px solid white;
+  filter: drop-shadow(0 0 5px black);
+  translate: (50px, 100px);
+
 }
 
 .closebtn {
@@ -117,3 +163,78 @@ footer {
 .sidebar {padding-top: 15px;}
 .sidebar a {font-size: 18px;}
 }
+
+
+
+/*****************************************/
+nav{
+  height: 10vh;
+  width: 100vw;  
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: white;
+  
+}
+
+#listaMENU{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  }
+  
+  .item-menu{
+    padding: 10px;
+    list-style: none;
+    color: rgb(255, 255, 255);
+    font-size: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+  }
+  
+  .item-menu:hover{
+    color: rgb(119, 0, 255);
+    scale: 1.1;
+    transition: 0.3s;
+    font-weight: 400;
+  }
+  
+  #listaMENU a{
+    text-decoration: none;
+  }
+
+
+
+
+
+
+
+
+
+
+
+  
+.icon-bar {
+  width: 90px;
+  background-color: #555;
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 36px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+
+
